// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow basic usage 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`Workflow basic usage 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic usage 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`Workflow basic step 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic step 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "schema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "x": {
          "description": "sweet number",
          "type": "number",
        },
      },
      "required": [
        "x",
      ],
      "type": "object",
    },
    "status": "intr",
    "step": {
      "description": "Enter a number",
      "key": [
        "c",
        "need_number",
      ],
    },
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;

exports[`Workflow basic step 4`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 5`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "undefined",
    "path": [
      "x"
    ],
    "message": "Required"
  }
]],
    "status": "err",
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;
